change echo to gin
